--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12886,7 +12886,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header/bg-2.jpg");
+  background-image: url("../img/header/bg-2.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
