--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4676,11 +4676,11 @@ fieldset:disabled .btn {
 }
 
 .nav-wrapper {
-  display: block;
+    display: block; /* necessary for smooth collapse height animation */
 }
 
 .collapsing {
-  transition: height 0.6s ease;
+    transition: height 0.6s ease; /* slow down menu opening */
 }
 
 .navbar-expand {
