--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13171,7 +13171,7 @@ header.masthead {
   color: #fff;
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
-    url("../img/header/bg-4.jpg");
+    url("https://firuza-pl.github.io/narmishfood/assets/img/header/bg-4.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
