--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13169,13 +13169,11 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image:
-    linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
-    url("https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg");
-  background-size: cover;
-  background-position: center;
+  background-image: url("../img/header/bg-4.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
 }
 
 header.masthead .masthead-subheading {
