--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13169,13 +13169,16 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../img/header/bg-4.jpg");
-  background-repeat: no-repeat;
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+    url("../img/header/bg-1.jpg");
+   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
 }
 
+/* MOBILE FIX */
 @media (max-width: 768px) {
   header.masthead {
     background-attachment: scroll;
